--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -5,7 +5,10 @@ body
 
 .banner
 {
-background-color: blue;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+    background-size: cover;
+    background-position: center;
+    height: 300px;
 color: white;
 }
 
