--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,21 +1,57 @@
 body
 {
   text-align: center;
+  font-family: helvetica;
 }
 
-.banner
+.banner1
 {
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
     background-size: cover;
     background-position: center;
     height: 300px;
+    color: white;
+}
+
+#title
+{
+font-size: 70px;
+color: white;
+font-style: helvetica;
+font-weight: bold;
+}
+
+#list
+{
+font-family: helvetica;
+font-size: 18px;
 color: white;
 }
 
-
-h6
+#subtitle
 {
-  background-color: gray;
+  font-size: 32px;
+  font-style: helvetica;
+  font-weight: bold;
+}
+
+
+
+.banner2
+{
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+background-size: auto;
+background-position: center;
+}
+
+
+
+
+.footer
+{
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
   color: white;
   text-align: left;
 }
